# dormalert

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: dormalert-detect.yml  dormalert-heartbeat.yml
docs/: architecture.md  deployment.md  detection_strategy.md  implementation_plan.md  operations.md  reconnaissance.md  risk_register.md  submission_strategy.md  whatsapp_cloud_api.md  whatsapp_github_actions.md
docs/superpowers/plans/: 2026-04-23-detection-reliability.md
scripts/: dormalert.service.example
src/: __init__.py  main.py
src/app/: __init__.py  runner.py  simulation.py
src/config/: models.py  settings.py
src/detector/: __init__.py  antibot.py  engine.py  http_client.py  models.py  profile.py
src/diagnostics/: __init__.py  artifacts.py
src/notifier/: __init__.py  base.py  callmebot.py  email_smtp.py  registry.py  stdout.py  telegram.py  webhook.py  whatsapp_cloud.py
src/orchestrator/: service.py
src/persistence/: sqlite_store.py
src/submitter/: __init__.py  base.py  dry_run.py  registry.py  studentvillage.py
src/utils/: env.py  logging.py  serialization.py  time.py
src/verifier/: base.py  rules.py
tests/: test_antibot.py  test_callmebot_notifier.py  test_candidate_opening.py  test_detector_engine.py  test_detector_profiles.py  test_email_notifier.py  test_failure_alerts.py  test_main_helpers.py  test_opening_simulation.py  test_orchestrator.py  test_orchestrator_confirmation.py  test_settings.py  test_telegram_notifier.py  test_whatsapp_cloud_notifier.py
